..F....... [ZBXNEXT-7461] implemented expandable subfilters in latest data page; fixed clickable tags
* commit '6da6130717de960eb79a41c3d0532ab423aa9215': (23 commits)
  ..F....... [ZBXNEXT-7461] fixed block overflow issue in expandible subfilters
  ..F....... [ZBXNEXT-7461] reverted  629d3aafc9504446df680649ec7f54c0f6ef7f01.
  ..F....... [ZBXNEXT-7461] fixed broken layout in latest data subfilters
  ..F....... [ZBXNEXT-7461] reverted 1d4f271e0c884c71cdf7fe8a664c6ce435e7bf10
  ..F....... [ZBXNEXT-7461] fixed background highlight of inactive header element on mouse over
  ..F....... [ZBXNEXT-7461] fixed broken layout when tag names are too long
  ..F....... [ZBXNEXT-7461] fixed coding style and incorrectly solved merge conflict
  ..F....... [ZBXNEXT-7461] fixed incorrectly solved merge conflict
  ..F....... [ZBXNEXT-7461] fixed multiple issues related with subfilter option layout
  ..F....... [ZBXNEXT-7461] fixed expandible subfilter block
  ..F....... [ZBXNEXT-7461] fixed coding style
  ..F....... [ZBXNEXT-7461] fixed visual highlighting  when hovering the non-interactive subfilter header
  ..F....... [ZBXNEXT-7461] fixed clickable tags in latest data results
  ..F....... [ZBXNEXT-7461] fixed unchecking of checkboxes when switching tabs in latest data page
  .D........ [ZBXNEXT-7461] fixed changelog
  ..F....... [ZBXNEXT-7461] fixed tag focusability in latest data results
  ..F....... [ZBXNEXT-7461] fixed minor usability issues
  .D........ [ZBXNEXT-7461] added changelog
  ..F....... [ZBXNEXT-6687] fixed multiple issues related with subfilter expandability
  ..F....... [ZBXNEXT-6687] multiple minor fixes
  ...

(cherry picked from commit e2a73ae192250a2168e42688bd51809701b89744)

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -33,6 +33,7 @@ $browser-sprite-path: '../img/browser-sprite.png?20211222';
 @import "components/dashboard/widget-item";
 @import "components/dashboard/widget-tophosts";
 @import "components/diff";
+@import "components/expandable-subfilter";
 @import "components/form-search";
 @import "components/inline-filter";
 @import "components/menu-main";
@@ -358,7 +359,7 @@ form {
 								background-color: rgba($font-color, .5);
 							}
 
-							.icon-wzrd-action {
+							.icon-wizard-action {
 								background-position: -165px -624px;
 							}
 
@@ -384,7 +385,7 @@ form {
 								border-bottom-color: rgba(0, 0, 0, .5);
 							}
 
-							.icon-wzrd-action {
+							.icon-wizard-action {
 								background-position: -165px -624px;
 							}
 
@@ -405,7 +406,7 @@ form {
 
 							[class*='icon-depend-'],
 							.icon-description,
-							.icon-wzrd-action {
+							.icon-wizard-action {
 								background-color: transparent;
 							}
 						}
@@ -515,7 +516,7 @@ form {
 				background-position: -49px -767px;
 			}
 
-			.icon-wzrd-action {
+			.icon-wizard-action {
 				background: url($sprite-path) no-repeat -6px -624px;
 				height: 12px;
 				min-height: 12px;
@@ -1935,6 +1936,22 @@ button {
 	}
 }
 
+.btn-tag {
+	@extend .tag;
+
+	min-height: unset;
+	outline: none;
+	border: none;
+
+	&:hover {
+		text-decoration: underline;
+		background-color: $ui-bg-selected-color;
+	}
+	&:focus {
+		background-color: $ui-bg-selected-color;
+	}
+}
+
 .btn-grey {
 	color: $btn-form-font-color;
 	background-color: $btn-form-bg-color;
@@ -2628,12 +2645,12 @@ $trigger-expression-tree-icons: (
 
 $form-icon-btn: (
 	cal: url($sprite-path) no-repeat -42px -834px,
-	wzrd-action: url($sprite-path) no-repeat -6px -617px
+	wizard-action: url($sprite-path) no-repeat -6px -617px
 );
 
 // Dynamically generated classes:
 //  .icon-cal
-//  .icon-wzrd-action
+//  .icon-wizard-action
 @each $form-icon-btn, $bgimage in $form-icon-btn {
 	.icon-#{$form-icon-btn} {
 		background: $transparent $bgimage;
